DONE: - UserDTO update - getChildrenSimpleData
TODO:
- children sub-accounts functionality: update and delete
- AuthEntryPointJWT (exception handler) ?